Fixed votes not being aligned

--- a/styles/post.module.css
+++ b/styles/post.module.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     color: white;
+    align-items: center;
 }
 
 .upvote, .downvote {
